<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behaviortree_py</name>
  <version>0.0.0</version>
  <description>ROS2 python binding to https://github.com/BehaviorTree/BehaviorTree.CPP</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>fmt</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
